src/test/deca/context/invalid/affect_indent_noValue_01_so.deca
// Description:
//    Tester l'affectation de variables non-valeur
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

{
        j;  //ici c'est pour faire passer qu'il est bien mais non (test de pom.xml)
        int a=9, c;
        a=c;
}